--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -24,8 +24,8 @@
         </button>
     </div>
     <span class="input-group-icon instasearch-icon">
-        <button id="pd-assoc-search-btn" type="submit" class="instasearch-submit input-clear bg-transparent" aria-label="@T("Common.Search")">
-            <i class="fa fa-magnifying-glass"></i>
+        <button id="pd-assoc-search-btn" type="submit" class="instasearch-submit input-clear bg-transparent" aria-label="@T("Common.Search")" tabindex="-1">
+            <i class="fa fa-magnifying-glass" aria-hidden="true"></i>
         </button>
     </span>
 </div>
