--- a/src/Smartstore.Web/wwwroot/shared/_accessibility.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_accessibility.scss
@@ -1,6 +1,6 @@
 /// <reference path="references.scss" />
 
-:is(a, button, .form-check-input):is(:focus-visible) {
+:is(a, button, .form-check-input, [tabindex="0"]):is(:focus-visible) {
     outline: 0;
     box-shadow: $focus-ring-box-shadow;
 }
