--- a/src/Smartstore.Web/Views/Shared/Partials/Customer.Avatar.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Customer.Avatar.cshtml
@@ -18,8 +18,7 @@
             <img class="avatar-img"
                  src="@await Url.MediaAsync(Model.FileId, Model.AvatarPictureSize, null, false)"
                  attr-class='(Model.DisplayRing, "avatar-ring")'
-                 role="presentation"
-                 alt="" />
+                 alt="@Model.UserName" />
         }
         else
         {
@@ -36,7 +35,7 @@
 <div class="@(Model.Large ? "customer-avatar-lg" : "customer-avatar")">
     @if (canViewProfile)
     {
-        <a class="avatar-link avatar-outer" asp-route="CustomerProfile" asp-route-id="@Model.Id" title="@Model.UserName" aria-label="@Model.UserName">
+        <a class="avatar-link avatar-outer" asp-route="CustomerProfile" asp-route-id="@Model.Id" title="@Model.UserName">
             @{ await Avatar(); }
         </a>
     }
