--- a/src/Smartstore.Web/Views/Shared/Partials/Breadcrumb.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Breadcrumb.cshtml
@@ -9,34 +9,43 @@
     {
         return;
     }
+
+    var itemAttrs = new AttributeDictionary();
+    itemAttrs.Add("itemscope", "");
+    itemAttrs.Add("itemprop", "itemListElement");
+    itemAttrs.Add("itemtype", "http://schema.org/ListItem");
+
+    var resHomepage = T("HomePage");
 }
 
 <zone name="breadcrumb_before"></zone>
 
 <nav class="breadcrumb-container d-none d-md-flex flex-wrap align-items-center mb-4" aria-label="@T("Aria.Label.Breadcrumb")">
-    <ol class="breadcrumb mb-0" role="list" itemscope itemtype="http://schema.org/BreadcrumbList">
-        <li class="breadcrumb-item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a asp-route="Homepage" title="@T("Categories.Breadcrumb.Top")" itemprop="item">
-                <meta itemprop="name" content="@T("HomePage")">
-                <meta itemprop="position" content="1">
+    <ol class="breadcrumb mb-0" itemscope itemtype="http://schema.org/BreadcrumbList">
+        <li class="breadcrumb-item" attrs="itemAttrs">
+            <a asp-route="Homepage" title="@resHomepage" itemprop="item">
+                <meta itemprop="name" content="@resHomepage">
                 <i class="fa fa-home" aria-hidden="true"></i>
-                <span class="sr-only">@T("Categories.Breadcrumb.Top")</span>
+                <span class="sr-only">@resHomepage</span>
             </a>
+            <meta itemprop="position" content="1">
         </li>
         @for (int i = 0; i < trail.Count - 1; i++)
         {
             var item = trail[i];
             var isLast = i == trail.Count - 1;
 
-            <li class="breadcrumb-item@(isLast ? " active" : "")" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+            <li class="breadcrumb-item" attr-class='(isLast, "active")' attrs="itemAttrs">
                 @if (item.HasRoute)
                 {
-                    <a href="@item.GenerateUrl(this.Url)" title="@item.Text" itemprop="item"><meta itemprop="position" content="@(i + 2)"><span itemprop="name" dir="auto">@item.Text</span></a>
+                    <a href="@item.GenerateUrl(this.Url)" title="@item.Text" itemprop="item"><span itemprop="name" dir="auto">@item.Text</span></a>
+                    <meta itemprop="position" content="@(i + 2)">
                 }
             </li>
         }
-        <li class="breadcrumb-item active" aria-current="page">
-            <span>@Html.Raw(trail.LastOrDefault().Text)</span>
+        <li class="breadcrumb-item active" aria-current="page" attrs="itemAttrs">
+            <span itemprop="name">@Html.Raw(trail.LastOrDefault().Text)</span>
+            <meta itemprop="position" content="@(trail.Count + 1)">
         </li>
     </ol>
 </nav>
