--- a/src/Smartstore.Web/Views/Catalog/Components/Menu/Categories.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/Components/Menu/Categories.cshtml
@@ -27,7 +27,7 @@
 }
 
 <div class="block block-catmenu mb-3">
-    <nav class="list-group catmenu" role="menu" aria-label="@T("Categories")">
+    <nav class="list-group catmenu" role="menu" aria-orientation="vertical" aria-label="@T("Categories")">
         @if (path.Count > 0)
         {
             foreach (var node in path)
@@ -84,7 +84,7 @@
 
         if (isSelected)
         {
-            <div class="@cssClass" role="menuitem" aria-current="page">
+            <div class="@cssClass" role="menuitem" aria-current="page" aria-disabled="true">
                 <span class="has-count" attr-data-count="(node.Value.ElementsCount.HasValue, node.Value.ElementsCount.ToString())">@node.Value.Text</span>
             </div>
         }
