--- a/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/Footer/Default.cshtml
@@ -40,7 +40,7 @@
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-info-heading">
                         <h4 id="footer-info-heading" class="footer-title nav-toggler collapsed" 
                             data-toggle="collapse" data-target="#footer-info" 
-                            aria-controls="footer-info" aria-expanded="false" role="button">
+                            aria-controls="footer-info" aria-expanded="false" role="button" tabindex="0">
                             @Html.Raw(T("Footer.Info"))
                         </h4>
                         <div class="collapse nav-collapse" id="footer-info" role="region" aria-labelledby="footer-info-heading">
@@ -53,7 +53,7 @@
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-service-heading">
                         <h4 id="footer-service-heading" class="footer-title nav-toggler collapsed" 
                             data-toggle="collapse" data-target="#footer-service" 
-                            aria-controls="footer-service" aria-expanded="false" role="button">
+                            aria-controls="footer-service" aria-expanded="false" role="button" tabindex="0">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Service"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Service.Mobile"))</span>
                         </h4>
@@ -67,7 +67,7 @@
                     <nav class="footer-links nav-collapsible" aria-labelledby="footer-company-heading">
                         <h4 id="footer-company-heading" class="footer-title nav-toggler collapsed" 
                             data-toggle="collapse" data-target="#footer-company" 
-                            aria-controls="footer-company" aria-expanded="false" role="button">
+                            aria-controls="footer-company" aria-expanded="false" role="button" tabindex="0">
                             <span class="d-none d-md-block">@Html.Raw(T("Footer.Company"))</span>
                             <span class="d-md-none">@Html.Raw(T("Footer.Company.Mobile"))</span>
                         </h4>
@@ -88,11 +88,11 @@
                                 <div class="footer-newsletter nav-collapsible">
                                     <h4 id="newsletter-subscribe-heading" class="footer-title nav-toggler collapsed"
                                         data-toggle="collapse" data-target="#newsletter-body"
-                                        aria-controls="newsletter-body" aria-expanded="false" role="button">
+                                        aria-controls="newsletter-body" aria-expanded="false" role="button" tabindex="0">
                                         @Html.Raw(T("Newsletter.Title"))
                                     </h4>
                                     <div id="newsletter-body" class="collapse nav-collapse" role="region" aria-labelledby="newsletter-subscribe-heading">
-                                        <div id="newsletter-subscribe-block">
+                                        <div id="newsletter-subscribe-block" class="mt-2">
                                             <div class="input-group has-icon shadow-xs rounded-pill mb-2">
                                                 <input asp-for="NewsletterEmail" 
                                                        id="newsletter-email" 
@@ -144,7 +144,7 @@
                             <div class="theme-selector nav-collapsible">
                                 <h4 id="theme-selector-heading" class="footer-title nav-toggler collapsed"
                                     data-toggle="collapse" data-target="#footer-themes" 
-                                    aria-controls="footer-themes" aria-expanded="false"role="button">
+                                    aria-controls="footer-themes" aria-expanded="false" role="button" tabindex="0">
                                     @Html.Raw(T("Footer.Themes"))
                                 </h4>
                                 <div id="footer-themes" class="content collapse nav-collapse" role="region" aria-labelledby="theme-selector-heading">
@@ -184,3 +184,12 @@
         </div>
     </div>
 </footer>
+
+<script>
+    $(function () {
+        // TODO: (wcag) (mh) Remove this after option for self triggering events were implemented in accessability script.
+        $(".footer-title").on('ak-expand ak-collapse', function (e) {
+            $(this).trigger("click");
+        });
+    });
+</script>
