--- a/src/Smartstore.Web/Views/Customer/DownloadableProducts.cshtml
+++ b/src/Smartstore.Web/Views/Customer/DownloadableProducts.cshtml
@@ -31,7 +31,7 @@
                         @item.ProductName.Value.Truncate(50, "…")
                     </div>
                     <dl class="row mb-0" role="presentation">
-                        <dt class="col-sm-3 font-weight-400 text-muted">@T("Order.Order#")</dt>
+                        <dt class="col-sm-3 fwn text-muted">@T("Order.Order#")</dt>
                         <dd class="col-sm-9">
                             <a id="esd-order-link@(item.Id)"
                                asp-action="Details" 
@@ -40,11 +40,11 @@
                                aria-labelledby="esd-order-details esd-order-link@(item.Id)"
                                rel="nofollow">@item.OrderId</a>
                         </dd>
-                        <dt class="col-sm-3 font-weight-400 text-muted">@T("Common.CreatedOn")</dt>
+                        <dt class="col-sm-3 fwn text-muted">@T("Common.CreatedOn")</dt>
                         <dd class="col-sm-9">
                             <time datetime="@item.CreatedOn.ToIso8601String()">@createdOnStr</time>
                         </dd>
-                        <dt class="col-sm-3 font-weight-400 text-muted">@T("DownloadableProducts.Fields.Product")</dt>
+                        <dt class="col-sm-3 fwn text-muted">@T("DownloadableProducts.Fields.Product")</dt>
                         <dd class="col-sm-9">
                             <a href="@item.ProductUrl" sm-language-attributes-for="item.ProductName">
                                 @item.ProductName
