WCAG: Identity (wip)

--- a/src/Smartstore.Web/Views/Identity/ChangePassword.cshtml
+++ b/src/Smartstore.Web/Views/Identity/ChangePassword.cshtml
@@ -11,13 +11,12 @@
 }
 
 <form asp-action="ChangePassword" asp-controller="Identity" method="post" class="form-horizontal">
-
     @if (ViewContext.ViewData.ModelState.ContainsKey(""))
     {
         <div asp-validation-summary="ModelOnly"></div>
     }
 
-    <div sm-if="Model.Result.HasValue()" class="alert alert-info">
+    <div sm-if="Model.Result.HasValue()" class="alert alert-info" role="alert">
         @Model.Result
     </div>
 
@@ -52,7 +51,7 @@
     <div class="form-group row">
         <div class="col">
             <button type="submit" class="btn btn-lg btn-primary">
-                <i class="fa fa-check"></i>
+                <i class="fa fa-check" aria-hidden="true"></i>
                 <span>@T("Account.ChangePassword.Button")</span>
             </button>
         </div>
