--- a/src/Smartstore.Web/Views/Identity/AccountActivation.cshtml
+++ b/src/Smartstore.Web/Views/Identity/AccountActivation.cshtml
@@ -7,7 +7,7 @@
         <h1>@T("Account.AccountActivation")</h1>
     </div>
     <div class="page-body">
-        <div class="alert alert-success">
+        <div class="alert alert-success" role="alert">
             @ViewBag.ActivationResult
         </div>
     </div>
